js/js.translator/testData/incremental/invalidation/addUpdateRemoveDependentModule/lib2/l2.1.kt
inline fun qux2() = foo() + 32
